# geo-intro-py

./: .codespell-ignore  .gitignore  .gitlab-ci.yml  .gitmodules  .instructions.md  .pre-commit-config.yaml  LICENSE  README.md  _config.yml  _toc.yml  main.py  pyproject.toml  requirements_pages.txt
.github/workflows/: build.yml  deploy.yml
.gitlab/templates/: auto-bump.yml  deploy.yml  pre-commit.yml  test.yml
contenido/: _config.yml  _toc.yml  references.bib
contenido/book/: resumen_ejecutivo_curso_python_geografico.qmd
contenido/geoespacial/: 09_geopandas.ipynb  09_geopandas.md
contenido/labs/: instrucciones_labs.md  lab_01.ipynb  lab_01.md  lab_02.ipynb  lab_02.md  lab_03.ipynb  lab_03.md  lab_04.ipynb  lab_04.md
contenido/python/: 01_introduccion.ipynb  01_introduccion.md  02_variables.ipynb  02_variables.md  03_estructuras_datos.ipynb  03_estructuras_datos.md  04_operaciones_cadenas.ipynb  04_operaciones_cadenas.md  05_bucles.ipynb  05_bucles.md  05_looping.ipynb  05_looping.md  06_funciones_clases.ipynb  06_funciones_clases.md  07_archivos.ipynb  07_archivos.md  08_numpy_pandas.ipynb  08_numpy_pandas.md
contenido/sobre/: instructor.md  resumen_ejecutivo_curso_python_geografico.md  resumen_ejecutivo_curso_python_geografico.qmd  schedule.md  syllabus.md  textbooks.md  videos.md
contenido/software/: colab.md  git.md  jupyterlab.md  miniconda.md  overview.md  vscode.md
scripts/: colab_notebook_orchestrator.py  md_to_ipynb_converter.py
