
[project]
name = "geo-intro-py"
version = "0.1.0"
description = "Curso introductorio de programación geoespacial en Python."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Luis Alfredo López Gonzales", email = "lalgonzales@gmail.com" }
]
maintainers = [
    { name = "Luis Alfredo López Gonzales", email = "lalgonzales@gmail.com" }
]
keywords = [
    "geospatial", "python", "education", "notebooks"
]
dependencies = [
    "jupytext>=1.17.2",
]


[project.urls]
repository = "https://github.com/lalgonzales/geo-intro-py"
homepage = "https://github.com/lalgonzales/geo-intro-py"
issues = "https://github.com/lalgonzales/geo-intro-py/issues"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
pages = [
    "folium>=0.20.0",
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "jupyter-book>=1.0.0",
    "mapclassify>=2.8.1",
    "matplotlib>=3.9.4",
    "myst-nb>=1.3.0",
    "nbconvert>=7.16.6",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
]


